[add] HomebrewでSwiftLintを導入し、preBuildScriptsで実行
Apple Silicon Macでのインストール先指定なので、改良の余地あり

--- a/project.yml
+++ b/project.yml
@@ -34,6 +34,16 @@ targets:
       - target: DataStore
       - target: Domain
       - target: Presentation
+    preBuildScripts:
+      - script: |
+          # NOTE: Apple Silicon Macでのインストール先なので、Intel Macだとダメかも
+          if which /opt/homebrew/bin/swiftlint >/dev/null; then
+            /opt/homebrew/bin/swiftlint autocorrect --format
+            /opt/homebrew/bin/swiftlint
+          else
+            echo "warning: SwiftLint is not installed. Please install SwiftLint with Homebrew."
+          fi
+        name: SwiftLint
   DataStore:
     type: framework
     platform: iOS
