[fix] 複数のStatic Frameworkを一つのDynamic Frameworkにまとめた

--- a/project.yml
+++ b/project.yml
@@ -9,7 +9,6 @@ settings:
   base:
     INFOPLIST_FILE: $TARGET_NAME/Info.plist
     MARKETING_VERSION: 1.0.0
-    DISABLE_DIAMOND_PROBLEM_DIAGNOSTIC: YES # https://forums.swift.org/t/swift-packages-in-multiple-targets-results-in-this-will-result-in-duplication-of-library-code-errors/34892
 
 packages:
   Alamofire:
@@ -23,17 +22,16 @@ packages:
     version: 6.1.0
 
 targets:
-  RxSwiftTraining:
+  Application:
     type: application
     platform: iOS
-    sources: [RxSwiftTraining]
+    sources: [Application]
     settings:
       base:
         PRODUCT_BUNDLE_IDENTIFIER: com.shumpei.nagata.RxSwiftTraining
     dependencies:
-      - target: DataStore
-      - target: Domain
       - target: Presentation
+      - target: Umbrella
     preBuildScripts:
       - script: |
           # NOTE: Apple Silicon Macでのインストール先なので、Intel Macだとダメかも
@@ -45,7 +43,7 @@ targets:
           fi
         name: SwiftLint
   DataStore:
-    type: framework
+    type: library.static # Domainからしか依存されない・Bundleを持たない
     platform: iOS
     sources: [DataStore]
     settings:
@@ -54,11 +52,9 @@ targets:
         CODE_SIGN_STYLE: Automatic
     dependencies:
       - package: Alamofire
-      - package: RxSwift
-        product: RxRelay
-      - package: RxSwift
+      - target: Umbrella
   Domain:
-    type: framework
+    type: library.static # Presentationからしか依存されない・Bundleを持たない
     platform: iOS
     sources: [Domain]
     settings:
@@ -66,10 +62,8 @@ targets:
         PRODUCT_BUNDLE_IDENTIFIER: com.shumpei.nagata.RxSwiftTraining.Domain
         CODE_SIGN_STYLE: Automatic
     dependencies:
-      - package: RxSwift
-        product: RxRelay
-      - package: RxSwift
       - target: DataStore
+      - target: Umbrella
   Presentation:
     type: framework
     platform: iOS
@@ -79,19 +73,33 @@ targets:
         PRODUCT_BUNDLE_IDENTIFIER: com.shumpei.nagata.RxSwiftTraining.Presentation
         CODE_SIGN_STYLE: Automatic
     dependencies:
+      - target: Domain
+      - target: Umbrella
+  # 複数のStatic Frameworkを一つのDynamic Frameworkにまとめる
+  # Reference:
+  #   - https://speakerdeck.com/kishikawakatsumi/swiftniokeruinpototorinkufalseshi-zu-miwotan-ru
+  #   - https://medium.com/eureka-engineering/create-merged-framework-to-cut-appstartuptime-72ee67b2bbab
+  Umbrella: 
+    type: framework
+    platform: iOS
+    sources: [Umbrella]
+    settings:
+      base:
+        PRODUCT_BUNDLE_IDENTIFIER: com.shumpei.nagata.RxSwiftTraining.Umbrella
+        CODE_SIGN_STYLE: Automatic
+    dependencies:
       - package: MySwiftExtensions
+      - package: RxSwift
       - package: RxSwift
         product: RxCocoa
       - package: RxSwift
         product: RxRelay
-      - package: RxSwift
-      - target: Domain
 
 schemes:
   RxSwiftTraining-Debug:
     build:
       targets:
-        RxSwiftTraining: all
+        Application: all
     run:
       config: Debug
     test:
