--- a/Application/Settings.bundle/com.mono0926.LicensePlist.plist
+++ b/Application/Settings.bundle/com.mono0926.LicensePlist.plist
@@ -20,9 +20,33 @@
 		</dict>
 		<dict>
 			<key>File</key>
+			<string>com.mono0926.LicensePlist/LicensePlist</string>
+			<key>Title</key>
+			<string>LicensePlist</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
 			<string>com.mono0926.LicensePlist/RxSwift</string>
 			<key>Title</key>
 			<string>RxSwift</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
+			<string>com.mono0926.LicensePlist/SwiftLint</string>
+			<key>Title</key>
+			<string>SwiftLint</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
+			<string>com.mono0926.LicensePlist/xcodegen</string>
+			<key>Title</key>
+			<string>xcodegen</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
